--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <!DOCTYPEhtml>
+<html>
+  <head>
+    <title>Causes of The Cold War</title>
+    </head>
+  <body background="http://loomynarty420noscope.webstarts.com/uploads/colors.gif">
+  </body>
+  </html
