--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
     <title>Causes of The Cold War</title>
     </head>
   <body background="http://loomynarty420noscope.webstarts.com/uploads/colors.gif">
+  <center>
+<h1><p>What was the importance of the Cold War?</p></h1>
+</center>
+<center>
+<h5><p>The Cold War was important because it split the world into two rival sides that came into conflict with each other in a number of places around the world.  This conflict has left us with, among other things, a huge aresenal of nuclear weapons, particularly in the US and in Russia.</p></h5>
   </body>
   </html
