--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </center>
 <center>
 <h3><p>The Cold War was important because it split the world into two rival sides that came into conflict with each other in a number of places around the world.  This conflict has left us with, among other things, a huge aresenal of nuclear weapons, particularly in the US and in Russia.</p></h3>
-  <img src="http://www.bbc.co.uk/staticarchive/39a656d0fc2c77f746b3212a31fde2a8e8194450.jpg" alt="Here comes dat boii" style="width:304px;height:228px;">
+  <img src="http://www.bbc.co.uk/staticarchive/39a656d0fc2c77f746b3212a31fde2a8e8194450.jpg" alt="Here comes dat boii" style="width:304px;height:228px;" border="5">
     </center>
   </body>
   </html
