--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@
   <img src="http://www.bbc.co.uk/staticarchive/39a656d0fc2c77f746b3212a31fde2a8e8194450.jpg" alt="Here comes dat boii" style="width:304px;height:228px;" border="5">
     </center>
   </body>
-  </html
+</html>
