--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     </head>
   <body background="http://loomynarty420noscope.webstarts.com/uploads/colors.gif">
   <center>
-<h1><p>What was the importance of the Cold War?</p></h1>
+<h1><p>What were the causes of the Cold War?</p></h1>
     </center>
 <center>
-<h3><p>The Cold War was important because it split the world into two rival sides that came into conflict with each other in a number of places around the world.  This conflict has left us with, among other things, a huge aresenal of nuclear weapons, particularly in the US and in Russia.</p></h3>
+<h3><p>The Cold War split the world into two rival sides that came into conflict with each other in a number of places around the world.  This conflict has left us with, among other things, a huge aresenal of nuclear weapons, particularly in the US and in Russia.</p></h3>
   <img src="http://www.bbc.co.uk/staticarchive/39a656d0fc2c77f746b3212a31fde2a8e8194450.jpg" alt="Here comes dat boii" style="width:304px;height:228px;" border="5">
     </center>
   </body>
