--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
   <body background="http://loomynarty420noscope.webstarts.com/uploads/colors.gif">
   <center>
-<h1><p>What were the causes of the Cold War?</p></h1>
+<h1><p>What were the causes of The Cold War?</p></h1>
     </center>
 <center>
 <h3><p>The Cold War split the world into two rival sides that came into conflict with each other in a number of places around the world.  This conflict has left us with, among other things, a huge aresenal of nuclear weapons, particularly in the US and in Russia.</p></h3>
