--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <h1><p>What were the causes of The Cold War?</p></h1>
     </center>
 <center>
-<h3><p>The Cold War split the world into two rival sides that came into conflict with each other in a number of places around the world.  This conflict has left us with, among other things, a huge aresenal of nuclear weapons, particularly in the US and in Russia.</p></h3>
-  <img src="http://www.bbc.co.uk/staticarchive/39a656d0fc2c77f746b3212a31fde2a8e8194450.jpg" alt="Here comes dat boii" style="width:304px;height:228px;" border="5">
+<h3><p>In summary, the Cold War began in 1945 and was a period of tension between the United States and Soviet Union. President Harry Truman fueled the fire by using the atomic bomb as leverage and issuing the Truman Doctrine to fund democracy in third world nations.</p></h3>
     </center>
   </body>
 </html>
