--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1><p>What were the causes of The Cold War?</p></h1>
     </center>
 <center>
-<h3><p>In summary, the Cold War began in 1945 and was a period of tension between the United States and Soviet Union. President Harry Truman fueled the fire by using the atomic bomb as leverage and issuing the Truman Doctrine to fund democracy in third world nations.</p></h3>
+<span class="s1">In summary, the Cold War began in 1945 and was a period of tension between the United States and Soviet Union. President Harry Truman fueled the fire by using the atomic bomb as leverage and issuing the Truman Doctrine to fund democracy in third world nations.</span>
     </center>
   </body>
 </html>
